Added the three pages for analysis, design and software

--- a/template/uetke/templates/static_pages/data_analysis.html
+++ b/template/uetke/templates/static_pages/data_analysis.html
@@ -42,7 +42,7 @@
         <div class="col-md-4 text-center">
           <img src="{{ SITEURL }}/theme/img/visualization.svg" style="width: 75%"/>
           <p class="lead mt-3">Visualization</p>
-          <p class="text-justify">Show your data in professional formats. High-quality plots and images to convey as much information as possible. From 3D figures to animations, ready to use in presentations, papers and applications.</p>
+          <p class="text-justify">Show your data in professional formats. High-quality plots and images. From 3D figures to animations, ready to use in presentations, papers and applications.</p>
         </div>
       </div>
     <!-- Data Analysis for Proposals -->
@@ -51,7 +51,7 @@
         <div class="col-md-8"><p class="lead text-justify">Data Analysis for your Proposals</p>
           <p class="text-justify">If you are writing a grant proposal and need help with the data analysis section, we can assist you. Don't let good experimental work be limited by the capabilities of your data analysis.</p>
           <p>We can help you plan ahead and develop a detailed proposal including how data is going to be handled, schedules and costs.</p>
-          <p><a href="/contact">Contact us</a> if you are unsure of how you are going to handle your data in your next proposal.</p>
+          <p><a href="{{ SITEURL }}/contact">Contact us</a> if you are unsure of how you are going to handle your data in your next proposal.</p>
         </div>
       </div>
      <!-- The Agile Process -->
@@ -60,7 +60,7 @@
               <h3>Agile Software Development</h3>
           </div>
           <div class="col-md-8">
-              <p class="text-justify">At Uetke we are committed to deliver solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
+              <p class="text-justify">At Uetke we are committed to delivering solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
                   <ul>
                     <li><b>Individuals and Interactions</b> over processes and tools</li>
                     <li><b>Working Software</b> over comprehensive documentation</li>
@@ -88,7 +88,7 @@
 
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="text-justify">After building a setup, many researchers face the problem of analyzing large amounts of data without the proper tools. Sometimes it is not only about the quantity, but the complexity of the information gathered. Determining the edges of a cell, counting the number of nanoparticles in an image, fitting complex models, finding nearest neighbors, are just some examples of what a researcher may face.</p>
+                  <p class="text-justify">After building a setup, many researchers face the problem of analysing large amounts of data without the proper tools. Sometimes it is not only about the quantity, but the complexity of the information gathered. Determining the edges of a cell, counting the number of nanoparticles in an image, fitting complex models, finding nearest neighbors, are just some examples of what a researcher may face.</p>
                   <p class="text-justify">At Uetke we work closely with scientists to understand what their needs are. We can help them understand what are the best statistical tests for their data and how to make the best out of what they have already acquired. Researchers can keep focused on their experiments while we make the best to understand their results. Analysing data is very time consuming especially when lacking the basic programming knowledge.</p>
                 </div>
               </div>
@@ -103,7 +103,7 @@
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="text-justify">Depending on the task, we deliver different solutions. If we are asked to perform data analysis, we will deliver a completely open-source package that can be audited and expanded later on. We can also train researchers on how to analyse their data and how to better use computational resources. If we are asked to develop a data-handling procedure, we will deliver a custom made handbook with all the information. We will always work closely with researches to develop a full platform to meet their needs.</p>
+                  <p class="text-justify">Depending on the task, we deliver different solutions. If we are asked to perform data analysis, we will deliver a completely open-source package that can be audited and expanded later on. We can also train researchers on how to analyse their data and how to better use computational resources. If we are asked to develop a data-handling procedure, we will deliver a custom-made handbook with all the information on the protocols. We will always work closely with researchers to develop a full platform to meet their needs.</p>
                 </div>
               </div>
             </div>
@@ -118,7 +118,7 @@
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-body">
                   <p class="text-justify">Data analysis is a crucial part of any scientist's work. In order to reproduce results, researchers need not only data but also the analysis software that was used. Proprietary software doesn't allow users to audit its content and therefore bugs and updates can make it impossible to reproduce a result even starting from the same dataset. The world is asking for more open science and at Uetke we are prepared for it.</p>
-                  <p class="text-justify">Researchers can't know everything about everything but they can leverage about the expertise of others. People focused into performing complex experiments sometimes lack the time to train themselves in data analysis and software development. Uetke can fill that gap with a sustainable approach. We deliver high quality software that can be inspected by its users. Our programs can, therefore, be used as learning examples for further development and can be audited by anyone.</p>
+                  <p class="text-justify">Researchers can't know everything about everything but they can leverage the expertise of others. People focused on performing complex experiments sometimes lack the time to train themselves in data analysis and software development. Uetke can fill that gap with a sustainable approach. We deliver high-quality software that can be inspected by its users. Our programs can, therefore, be used as learning examples for further development and can be audited by anyone.</p>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
     <div class="row mt-3">
         <div class="col-md-12">
             <h3>Full stack solutions</h3>
-            <p class="text-justify">At Uetke we offer integral solutions. We can help you all the way from the <a href="/experiment-design">design of the experiment</a>, to the <a href="/scientific-software">development of software for controlling setups</a> and the <a href="/data-analysis">data analysis</a>, including the <a href="/courses">training of scientists</a>. It doesn't matter if you are an established group, if you are applying for your startup grant or if you are just curious about what we do. <a href="/contact">Contact us</a> to see how we can be of assistance.</p>
+            <p class="text-justify">At Uetke we offer integral solutions. We can help you all the way from the <a href="{{ SITEURL }}/experiment-design">design of the experiment</a>, to the <a href="{{ SITEURL }}/scientific-software">development of software for controlling setups</a> and the <a href="{{ SITEURL }}/data-analysis">data analysis</a>, including the <a href="{{ SITEURL }}/courses">training of scientists</a>. It doesn't matter if you are an established group, if you are applying for your startup grant or if you are just curious about what we do. <a href="{{ SITEURL }}/contact">Contact us</a> to see how we can be of assistance.</p>
         </div>
 
     </div>
