--- a/template/uetke/templates/static_pages/experiment-design.html
+++ b/template/uetke/templates/static_pages/experiment-design.html
@@ -42,7 +42,7 @@
         <div class="col-md-4 text-center">
           <img src="{{ SITEURL }}/theme/img/training.svg" style="width: 75%"/>
           <p class="lead mt-3">Training</p>
-          <p class="text-justify">We explain to the group how to use the microscope and how to troubleshoot the most common problems.</p>
+          <p class="text-justify">We teach the group how to use the hardware and how to troubleshoot the most common problems.</p>
         </div>
       </div>
     <!-- Experiment Design for Proposals -->
@@ -50,7 +50,7 @@
         <div class="col-md-4"><img src="{{ SITEURL }}/theme/img/writing_software.jpg" style="width: 100%;"/> </div>
         <div class="col-md-8"><p class="lead text-justify">Experiment Design for your Proposals</p>
           <p class="text-justify">If you are writing a grant proposal and need help with the experimental design section, we can assist you. Don't let good ideas slip because of not considering the most suitable techniques.</p>
-          <p>We can help you plan ahead and develop a detailed proposal including materials, schedules and costs.</p>
+          <p>We can help you plan ahead and develop a detailed proposal including materials, schedules, and costs.</p>
           <p><a href="/contact">Contact us</a> if you are unsure about what microscopy techniques you are going to use in your next project.</p>
         </div>
       </div>
@@ -60,7 +60,7 @@
               <h3>Agile Software Development</h3>
           </div>
           <div class="col-md-8">
-              <p class="text-justify">At Uetke we are committed to deliver solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
+              <p class="text-justify">At Uetke we are committed to delivering solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
                   <ul>
                     <li><b>Individuals and Interactions</b> over processes and tools</li>
                     <li><b>Working Software</b> over comprehensive documentation</li>
@@ -88,7 +88,7 @@
 
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="text-justify">We work side by side with senior and junior members of the lab. Through face-to-face discussions we will develop a full strategy regarding your experimental needs. We provide a comprehensive analysis, basing our conclusions not only on costs, but also on the availability of human resources, long term goals of the lab, and our own past experiences.</p>
+                  <p class="text-justify">We work side by side with senior and junior members of the lab. Through face-to-face discussions, we will develop a full strategy regarding your experimental needs. We provide a comprehensive analysis, basing our conclusions not only on costs, but also on the availability of human resources, long-term goals of the lab, and our own past experiences.</p>
                   <p class="text-justify">We can help you all the way from the writing of a proposal to the setup of the elements on an optical table, including the evaluation of different purchasing options. You should contact us if you doubt which microscope will answer your questions, or you need help calculating frame rates, resolution, etc.</p>
                 </div>
               </div>
@@ -103,7 +103,7 @@
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                  <p class="text-justify">Designing and building an experiment is a multi-stage task. If you are writing a proposal, you will get all the information you need for a complete experimental section, including calculations of resolution, frame rates, laser power, etc. If you are in the phase of building a setup, but lacking experienced researchers, we can build the microscope for you and train its users. We can also assist you if you need highly trained researchers for short periods of time to perform specific measurements.</p>
+                  <p class="text-justify">Designing and building an experiment is a multi-stage task. If you are writing a proposal, you will get all the information you need for a complete experimental section, including calculations of resolution, frame rates, laser powers, etc. If you are in the phase of building a setup but lacking experienced researchers, we can build the microscope for you and train its users. We can also assist you if you need highly trained researchers for short periods of time to perform specific measurements.</p>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
     <div class="row mt-3">
         <div class="col-md-12">
             <h3>Full stack solutions</h3>
-          <p class="text-justify">At Uetke we offer integral solutions. We can help you all the way from the <a href="/experiment-design">design of the experiment</a>, to the <a href="/scientific-software">development of software for controlling setups</a> and the <a href="/data-analysis">data analysis</a>, including the <a href="/courses">training of scientists</a>. It doesn't matter if you are an established group, if you are applying for your startup grant or if you are just curious about what we do. <a href="/contact">Contact us</a> to see how we can be of assistance.</p>
+          <p class="text-justify">At Uetke we offer integral solutions. We can help you all the way from the <a href="{{ SITEURL }}/experiment-design">design of the experiment</a>, to the <a href="{{ SITEURL }}/scientific-software">development of software for controlling setups</a> and the <a href="{{ SITEURL }}/data-analysis">data analysis</a>, including the <a href="{{ SITEURL }}/courses">training of scientists</a>. It doesn't matter if you are an established group, if you are applying for your startup grant or if you are just curious about what we do. <a href="{{ SITEURL }}/contact">Contact us</a> to see how we can be of assistance.</p>
         </div>
 
     </div>
