--- a/template/uetke/templates/static_pages/main.html
+++ b/template/uetke/templates/static_pages/main.html
@@ -34,27 +34,27 @@
       <div class="row">
         <div class="col-md-3">
           <div class="card">
-            <img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/electronics_card.jpeg" alt="Experiment Design">
+            <a href="{{ SITEURL }}/experiment-design/"><img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/electronics_card.jpeg" alt="Experiment Design"></a>
             <div class="card-body">
-              <h5 class="card-title text-center">Experiment Design</h5>
+              <h5 class="card-title text-center"><a href="{{ SITEURL }}/experiment-design/">Experiment Design</a></h5>
               <p class="card-text text-center">Ever wondered which microscopy technique you should apply to obtain the best results? If you are setting a new experiment in the laboratory, we can assist you with the design, building and more. <br />&nbsp;</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/computer-code_card.jpeg" alt="Computer Code">
+            <a href="{{ SITEURL }}/scientific-software/"><img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/computer-code_card.jpeg" alt="Computer Code"></a>
             <div class="card-body">
-              <h5 class="card-title text-center">Scientific Software</h5>
+              <h5 class="card-title text-center"><a href="{{ SITEURL }}/scientific-software/">Scientific Software</a></h5>
               <p class="card-text text-center">We develop software to perform a variety of tasks, from controlling devices over the network to recording cameras with high frame rates. Our software will increase throughput and ensure reproducibility of your experiments.</p>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/computer_coffee_card.jpeg" alt="Data Analysis">
+            <a href="{{ SITEURL }}/data-analysis/"><img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/computer_coffee_card.jpeg" alt="Data Analysis"></a>
             <div class="card-body">
-              <h5 class="card-title text-center">Data Analysis</h5>
+              <h5 class="card-title text-center"><a href="{{ SITEURL }}/data-analysis/">Data Analysis</a></h5>
               <p class="card-text text-center">An adequate analysis of your data can change your research. We develop programs to analyze large datasets, and routines to extract features of complex images. Improve your analysis and present your results with amazing plots!</p>
             </div>
           </div>
@@ -63,7 +63,7 @@
           <div class="card">
             <a href="{{ SITEURL }}/courses/"><img class="card-img-top d-none d-md-block" src="{{ SITEURL }}/theme/img/courses_card.jpg" alt="Data Analysis"></a>
             <div class="card-body">
-              <h5 class="card-title text-center">Courses</h5>
+              <h5 class="card-title text-center"><a href="{{ SITEURL }}/courses/">Courses</a></h5>
               <p class="card-text text-center">Do you struggle with the software of your setup? We offer a variety of courses specially designed for researchers that work in a lab. Learn how to control your experiment, build user interfaces and more.<br />&nbsp; </p>
             </div>
           </div>
