--- a/template/uetke/templates/static_pages/scientific_software.html
+++ b/template/uetke/templates/static_pages/scientific_software.html
@@ -63,7 +63,7 @@ minimize the delivery time and increase the throughput of your experiments.</p>
               <h3>Agile Software Development</h3>
           </div>
           <div class="col-md-8">
-              <p class="text-justify">At Uetke we are committed to deliver solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
+              <p class="text-justify">At Uetke we are committed to delivering solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
                   <ul>
                     <li><b>Individuals and Interactions</b> over processes and tools</li>
                     <li><b>Working Software</b> over comprehensive documentation</li>
@@ -91,8 +91,8 @@ minimize the delivery time and increase the throughput of your experiments.</p>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
-        <p class="text-justify">Many laboratories face a bottleneck when software turns into a handicap instead of a tool for performing experiments. However, few Ph.D. and postdocs have the knowledge and the time to sit down and program the tools they need to automatize tasks or to develop a proper user interface for visualizing the experiment in real-time. Leveraging from Uetke's expertise, labs around the world can cut down development times and focus into the science questions they want to answer.</p>
-                    <p class="text-justify">We work in <b>close collaboration with lab managers and with younger researchers</b>. In this way, we can fulfill the requirements for the long-term view of the group and those that arise from the daily use of the software. We have built extensive experience working in collaboration with different labs. This allowed us to understand the needs at every step of the development plan, especially how to to lay out a programming environment that will be sustainable in time. Our software is properly documented and designed in such a way that future users can expand its functionality
+        <p class="text-justify">Many laboratories face a bottleneck when software turns into a handicap instead of a tool for performing experiments. However, few Ph.D. candidates and postdocs have the knowledge and the time to sit down and program the tools they need to automatize tasks or to develop a proper user interface for visualizing the experiment data in real-time. Leveraging from Uetke's expertise, labs around the world can cut down development times and focus into the science questions they want to answer.</p>
+                    <p class="text-justify">We work in <b>close collaboration with lab managers and with younger researchers</b>. In this way, we can fulfill the requirements for the long-term view of the group and those that arise from the daily use of the software. We have built extensive experience working in collaboration with different labs. This allowed us to understand the needs at every step of the development plan, especially how to lay out a programming environment that will be sustainable in time. Our software is properly documented and designed in such a way that future users can expand its functionality
     without complications.</p>
       </div>
     </div>
@@ -107,7 +107,7 @@ minimize the delivery time and increase the throughput of your experiments.</p>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
-        <p class="text-justify">Applications of our software range from controlling optical tweezers to fast acquisition of digital cameras. We have also developed solutions to control confocal microscopes for single-molecule microscopy and to perform high-speed tracking of nano-particles. There are no problems we cannot solve, <a href="https://www.uetke.com/contact">contact us</a> to discuss what the possibilities are. A common example of how software can improve the throughput of your experiment is by automation. When software is allowed to take care of repetitive tasks, researchers will have free time to do creative work.</p>
+        <p class="text-justify">Applications of our software range from controlling optical tweezers to fast acquisition of digital cameras. We have also developed solutions to control confocal microscopes for single-molecule microscopy, spectroscopy, and to perform high-speed tracking of nano-particles. There are no problems we cannot solve, <a href="https://www.uetke.com/contact">contact us</a> to discuss what the possibilities are. A common example of how software can improve the throughput of your experiment is by automation. When software is allowed to take care of repetitive tasks, researchers will have free time to do creative work.</p>
       </div>
     </div>
   </div>
@@ -121,9 +121,9 @@ minimize the delivery time and increase the throughput of your experiments.</p>
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
       <div class="card-body">
-        <p class="text-justify">Many labs cannot afford to have permanent staff dedicated to software development, or prioritize other aspects of their research, which need more continuous attention. Buying proprietary software in some cases can be a viable solution,  but managers have to consider also the total costs of ownership. Some programs come with a subscription-based  licensing scheme that requires to pay periodically in order to use the software. In some cases, in order to get support or updates, it is necessary to pay an extra fee. Moreover, proprietary software normally comes with little room to custom solutions.</p>
+        <p class="text-justify">Many labs cannot afford to have permanent staff dedicated to software development. Some other labs prioritize different aspects of their research, which need more continuous attention. Buying proprietary software in some cases can be a viable solution, however, lab managers have to consider the total costs of ownership. Some programs come with a subscription-based  licensing scheme that requires paying periodically in order to use the software. In some cases, in order to get support or updates, it is necessary to pay an extra fee. Moreover, proprietary software normally comes with little room for custom solutions.</p>
 
-                    <p class="text-justify">Outsourcing software development can solve the limitations of proprietary programs without the increase in costs that an *in-house* solution would generate. Moreover, the delivery times are shorter and the code is more consistent  thanks to a broader experience in the field. Once you get software developed by Uetke you will become part of a  broader network of scientists who are actively working on software for labs. This will allow you to share your experiences with a like-minded community.</p>
+                    <p class="text-justify">Outsourcing software development can solve the limitations of proprietary programs without the increase in costs that an <i>in-house</i> solution would generate. Moreover, the delivery times are shorter and the code is more consistent thanks to our experience in the field. Once you get software developed by Uetke you will become part of a  broader network of scientists who are actively working on software for labs. This will allow you to share your experiences with a like-minded community.</p>
       </div>
     </div>
   </div>
@@ -134,7 +134,8 @@ minimize the delivery time and increase the throughput of your experiments.</p>
     <div class="row mt-3">
         <div class="col-md-12">
             <h3>Our Courses</h3>
-            <p class="text-justify">The delivery of software can be complemented with <a href="https://www.uetke.com/courses">courses for researchers</a>. These courses will set both young and seasoned researchers into the fast-track of software development. If you are planning to expand the software developed by Uetke at a later stage, or you want to give users complete control over the software that was delivered, the courses provided by Uetke are ideal. Uetke is the only company that provides both software and training based on open source projects, <b>done by researchers for researchers</b></p>
+            <p class="text-justify">The delivery of software can be complemented with <a href="{{ SITEURL }}/courses">courses for researchers</a>. These courses will set both young and seasoned researchers into the fast-track of software development. If you are planning to expand the software developed by Uetke at a later stage, or you want to give users complete control over the software that was delivered, the courses provided by Uetke are ideal. Uetke is the only company that provides both software and training based on open source projects, <b>done by researchers for researchers.</b>
+            </p>
         </div>
 
     </div>
