--- a/template/uetke/templates/static_pages/scientific_software.html
+++ b/template/uetke/templates/static_pages/scientific_software.html
@@ -137,7 +137,7 @@ minimize the delivery time and increase the throughput of your experiments.</p>
             <p class="text-justify">The delivery of software can be complemented with <a href="{{ SITEURL }}/courses">courses for researchers</a>. These courses will set both young and seasoned researchers into the fast-track of software development. If you are planning to expand the software developed by Uetke at a later stage, or you want to give users complete control over the software that was delivered, the courses provided by Uetke are ideal. Uetke is the only company that provides both software and training based on open source projects, <b>done by researchers for researchers.</b>
             </p>
         </div>
-
     </div>
+    {% include "static_pages/projects.html" %}
 </div>
 {% endblock %}
