--- a/template/uetke/templates/static_pages/about_us.html
+++ b/template/uetke/templates/static_pages/about_us.html
@@ -20,14 +20,17 @@
         </div>
     </div>
       <div class="row">
-      <div class="col-md-9 ml-3">
-      <p class="mt-2 text-justify">I am a freelance software developer for research laboratories. I have a Ph.D. in experimental physics focused in single particle optics and a master degree in single molecule microscopy. I have recently completed my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit. For my Ph.D. I ... (what did you do for your PhD? what research? describe briefly here). My latest scientific publication was on .. and it was the most viewed article in?
-      You can see all my scientific publications here (add link).
-      <p class="text-justify"> While doing my Ph.D. I came to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and more importantly, adequate programs. After my Ph.D., I started developing software for laboratories and found out that most of the users of my own programs couldn't understand them. The main issue was that they couldn't further develop the software I was leaving behind.</p>
-        <p class="text-justify">In order to fill the gap in knowledge, I have built a series of courses around my own experience both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers. </p>
-        <p class="text-justify">You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.</p>
+        <div class="col-md-9 ml-3">
+            <p class="mt-2 text-justify">My name is <b>Aquiles Carattino</b>, I am a software developer for research laboratories. While doing my Ph.D. at Leiden University under the supervision of Prof. Michel Orrit, I've come to realize the impact that better software could have on my own experiments. Most of the results of my thesis were achieved thanks to having the proper equipment and, more importantly, adequate data acquisition programs.
+            </p>
+            <p class="text-justify">After my Ph.D., I started Uetke in order to provide software solutions for research laboratories. In the process, I found out that most of the users of my own programs were lacking the basic tools to develop new programs based on the software that I was delivering.
+            </p>
+            <p class="text-justify">In order to fill the knowledge gap, I have built a series of courses around my own experience, both as a Ph.D. candidate and as a software developer. The courses are aimed at empowering young researchers with tools that can have a lasting impact on their careers.
+            </p>
+            <p class="text-justify">You can find more about myself on: <a href="https://www.linkedin.com/in/aquic">LinkedIn</a>, <a href="https://github.com/aquilesC/">Github</a>, <a href="https://www.aquicarattino.com">My Blog</a>, <a href="https://scholar.google.nl/citations?user=sXoXTQcAAAAJ&hl=en">Google Scholar</a>.
+            </p>
+        </div>
       </div>
-    </div>
       <br><hr class= "mb-0 mt-0 col-md-9 ml-2 style3"></br>
       <div class="row">
           <div class="col-md-5 my-auto text-center">
@@ -51,7 +54,7 @@
       <div class="col-md-7 ml-5">
         <p class="lead">Contact Us</p>
         <p class="text-justify">We are always willing to talk about Python, programming, and science in general. If you have any ideas or just want to have a chat, the best is to drop us an e-mail to <a href="mailto:aquiles@uetke.com">aquiles@uetke.com</a>.</p>
-        <p class="text-justify">We are currently living in Amsterdam, The Netherlands. If you are close enough we can meet up! You can also fill in the form below and we will get back to you as soon as possible.</p>
+        <p class="text-justify">We are based in Amsterdam, The Netherlands. If you are close enough we can always meet up for an inspiring talk. You can also fill in the form below and we will get back to you as soon as possible.</p>
       </div>
     </div>
   </div>
