--- a/template/uetke/templates/static_pages/advancedpythonforthelab.html
+++ b/template/uetke/templates/static_pages/advancedpythonforthelab.html
@@ -78,4 +78,5 @@
     </div>
   </div>
 {% include "static_pages/courses_offer.html" %}
+{% include "static_pages/contact_form.html" %}
 {% endblock %}
