--- a/template/uetke/templates/static_pages/gitforscientists.html
+++ b/template/uetke/templates/static_pages/gitforscientists.html
@@ -91,4 +91,5 @@
   </div> <!-- Nex Courses -->
 {% include "static_pages/courses_location.html" %}
 {% include "static_pages/courses_offer.html" %}
+{% include "static_pages/contact_form.html" %}
 {% endblock %}
