--- a/template/uetke/templates/static_pages/pythonforthelab.html
+++ b/template/uetke/templates/static_pages/pythonforthelab.html
@@ -140,4 +140,5 @@
   </div>
 {% include "static_pages/courses_location.html" %}
 {% include "static_pages/courses_offer.html" %}
+{% include "static_pages/contact_form.html" %}
 {% endblock %}
