--- a/template/uetke/templates/static_pages/scientific_software.html
+++ b/template/uetke/templates/static_pages/scientific_software.html
@@ -140,4 +140,5 @@ minimize the delivery time and increase the throughput of your experiments.</p>
     </div>
     {% include "static_pages/projects.html" %}
 </div>
+{% include "static_pages/contact_form.html" %}
 {% endblock %}
