--- a/template/uetke/templates/static_pages/courses.html
+++ b/template/uetke/templates/static_pages/courses.html
@@ -79,4 +79,5 @@
     </div>
   </div>
 {% include "static_pages/courses_offer.html" %}
+{% include "static_pages/contact_form.html" %}
 {% endblock %}
